@@ -11,6 +11,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [GUI] [FRONTEND] Selector of a custom certificate to use with an api parser
 - [LOG_FORWARDER] [HIREDIS] Ability to specify that the destination key is a dynamic template
 - [LOG_FORWARDER] New send_as_raw feature for LogForwarders in gui
+- [API_PARSER] New collector **Retarus**
 ### Changed
 - [LOG_FORWARDER] [HIREDIS] Use updated templates <name>_json
 ### Fixed
